--- a/themes/front-end-vi/css/style.css
+++ b/themes/front-end-vi/css/style.css
@@ -202,6 +202,7 @@ header .brand{
     min-height: 90px;
     overflow: hidden ;
 }
+
 #news .item > .information a.title{
     font-family: "Roboto Medium";
     font-size: 14px;
@@ -871,3 +872,24 @@ footer #info-company span{
 i.print_icon{background-image: url('../images/icons/print-icon.png');height: 30px;width: 30px;}
 .print{padding: 0px;margin-left: 0px;float: left;}
 .print a{color: #000000;}
+
+#page-top {
+    position: fixed;
+    bottom: 40px;
+    right: 20px;
+}
+#page-top .btn-to-top {
+    border-radius: 50px;
+}
+#page-top i {
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    display: block;
+    color: #a4a4a4;
+    background: #222;
+    font-size: 18px;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -wekbit-border-radius: 2px;
+}
